# stm32-bl

./: Cargo.toml  log.txt  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
