[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]

#defmt
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

# cortex
cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }

# embassy
embassy-sync = { version = "0.6" }
embassy-stm32 = { version = "0.2", default-features = false, features = [
    "stm32u575vg",
] }
embassy-boot-stm32 = { version = "0.2" }
embassy-usb = { version = "0.4", default-features = false }
embassy-usb-dfu = { git = "https://github.com/embassy-rs/embassy", rev = "9d62fba7d2e6b5d3bcb54770ffd031c1f3dafc84", features = [
    "dfu",
    "cortex-m",
] }
embassy-futures = { version = "0.1" }


[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-stm32/defmt",
    "embassy-stm32/defmt",
    "embassy-usb/defmt",
    "embassy-usb-dfu/defmt",
]

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "9d62fba7d2e6b5d3bcb54770ffd031c1f3dafc84" }
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "9d62fba7d2e6b5d3bcb54770ffd031c1f3dafc84" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "9d62fba7d2e6b5d3bcb54770ffd031c1f3dafc84" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "9d62fba7d2e6b5d3bcb54770ffd031c1f3dafc84" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "9d62fba7d2e6b5d3bcb54770ffd031c1f3dafc84" }


# Enable size optimizations for the bootloader to fit in 32K
[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
